@@ -47,7 +47,6 @@ import static org.junit.Assert.assertTrue;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
 import static org.ops4j.pax.exam.CoreOptions.options;
 
-import com.google.common.collect.ImmutableMap;
 import com.xebialabs.restito.semantics.Action;
 import com.xebialabs.restito.semantics.Call;
 import com.xebialabs.restito.semantics.Condition;
@@ -81,11 +80,11 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.karaf.bundle.core.BundleService;
 import org.codice.ddf.itests.common.AbstractIntegrationTest;
 import org.codice.ddf.itests.common.annotations.ConditionalIgnoreRule;
+import org.codice.ddf.itests.common.catalog.CatalogTestCommons;
 import org.codice.ddf.itests.common.config.UrlResourceReaderConfigurator;
 import org.codice.ddf.itests.common.csw.CswQueryBuilder;
 import org.codice.ddf.itests.common.csw.mock.FederatedCswMockServer;
@@ -98,6 +97,7 @@ import org.glassfish.grizzly.http.Method;
 import org.hamcrest.Matcher;
 import org.junit.After;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TestName;
@@ -135,8 +135,6 @@ public class TestFederation extends AbstractIntegrationTest {
 
   private static final String RECORD_TITLE_2 = "myXmlTitle";
 
-  private static final String CONNECTED_SOURCE_ID = "cswConnectedSource";
-
   private static final String CSW_STUB_SOURCE_ID = "cswStubServer";
 
   private static final String CSW_SOURCE_WITH_METACARD_XML_ID = "cswSource2";
@@ -152,14 +150,10 @@ public class TestFederation extends AbstractIntegrationTest {
   private static final DynamicUrl RESTITO_STUB_SERVER =
       new DynamicUrl("https://localhost:", RESTITO_STUB_SERVER_PORT, SUBSCRIBER);
 
-  private static final Path PRODUCT_CACHE = Paths.get("data", "Product_Cache");
-
   private static final DynamicPort CSW_STUB_SERVER_PORT = new DynamicPort(7);
 
   private static final DynamicUrl CSW_STUB_SERVER_PATH =
       new DynamicUrl(INSECURE_ROOT, CSW_STUB_SERVER_PORT, "/services/csw");
-
-  private static final int NO_RETRIES = 0;
 
   private static final String POLL_INTERVAL = "pollInterval";
 
@@ -191,20 +185,15 @@ public class TestFederation extends AbstractIntegrationTest {
 
   private static String gmdPid;
 
-  private static String connectedPid;
-
   @Rule public TestName testName = new TestName();
 
   @Rule public ConditionalIgnoreRule rule = new ConditionalIgnoreRule();
-
-  private final List<String> resourcesToDelete = new ArrayList<>();
 
   private UrlResourceReaderConfigurator urlResourceReaderConfigurator;
 
   public static String getSimpleXml(String uri) {
     return "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n"
-        + getFileContent(
-            XML_RECORD_RESOURCE_PATH + "/SimpleXmlNoDecMetacard", ImmutableMap.of("uri", uri));
+        + getFileContent(XML_RECORD_RESOURCE_PATH + "/SimpleXmlNoDecMetacard", Map.of("uri", uri));
   }
 
   @BeforeExam
@@ -347,12 +336,6 @@ public class TestFederation extends AbstractIntegrationTest {
 
     urlResourceReaderConfigurator.setUrlResourceReaderRootDirs(
         DEFAULT_URL_RESOURCE_READER_ROOT_RESOURCE_DIRS);
-
-    for (String resource : resourcesToDelete) {
-      FileUtils.deleteQuietly(new File(resource));
-    }
-
-    resourcesToDelete.clear();
 
     cswServer.stop();
 
@@ -635,10 +618,11 @@ public class TestFederation extends AbstractIntegrationTest {
         .assertThat()
         .contentType("text/html")
         .statusCode(equalTo(500))
-        .body(containsString("Unable to transform Metacard."));
+        .body(containsString("Resource file is not available"));
   }
 
   @Test
+  @Ignore("https://github.com/codice/ddf/issues/6798")
   public void testFederatedRetrieveExistingProductCsw() throws Exception {
     String productDirectory =
         new File(DEFAULT_SAMPLE_PRODUCT_FILE_NAME).getAbsoluteFile().getParent();
@@ -683,26 +667,30 @@ public class TestFederation extends AbstractIntegrationTest {
     String wildcardQuery =
         getCswQuery("AnyText", "*", "application/xml", "http://www.opengis.net/cat/csw/2.0.2");
 
-    given()
-        .contentType(ContentType.XML)
-        .body(wildcardQuery)
-        .when()
-        .post(CSW_PATH.getUrl())
-        .then()
-        .assertThat()
-        .body(
-            hasXPath(
-                "/GetRecordsResponse/SearchResults/Record/identifier[text()='"
-                    + METACARD_IDS[GEOJSON_RECORD_INDEX]
-                    + "']"),
-            hasXPath(
-                "/GetRecordsResponse/SearchResults/Record/identifier[text()='"
-                    + METACARD_IDS[XML_RECORD_INDEX]
-                    + "']"),
-            hasXPath("/GetRecordsResponse/SearchResults/@numberOfRecordsReturned", is("2")),
-            hasXPath(
-                "/GetRecordsResponse/SearchResults/Record/relation",
-                containsString("/services/catalog/sources/")));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .body(wildcardQuery)
+                .when()
+                .post(CSW_PATH.getUrl())
+                .then()
+                .assertThat()
+                .body(
+                    hasXPath(
+                        "/GetRecordsResponse/SearchResults/Record/identifier[text()='"
+                            + METACARD_IDS[GEOJSON_RECORD_INDEX]
+                            + "']"),
+                    hasXPath(
+                        "/GetRecordsResponse/SearchResults/Record/identifier[text()='"
+                            + METACARD_IDS[XML_RECORD_INDEX]
+                            + "']"),
+                    hasXPath("/GetRecordsResponse/SearchResults/@numberOfRecordsReturned", is("2")),
+                    hasXPath(
+                        "/GetRecordsResponse/SearchResults/Record/relation",
+                        containsString("/services/catalog/sources/"))),
+        3,
+        1);
   }
 
   @Test
@@ -715,7 +703,7 @@ public class TestFederation extends AbstractIntegrationTest {
             .getQuery();
 
     // Declare array of matchers so we can be sure we use the same matchers in each assertion
-    Matcher[] assertion =
+    Matcher<?>[] assertion =
         new Matcher[] {
           hasXPath(
               "/GetRecordsResponse/SearchResults/Record/identifier[text()='"
@@ -732,59 +720,76 @@ public class TestFederation extends AbstractIntegrationTest {
         };
 
     // Run a normal federated query to the CSW source and assert response
-    given()
-        .contentType(ContentType.XML)
-        .body(query)
-        .when()
-        .post(CSW_PATH.getUrl())
-        .then()
-        .assertThat()
-        .body(assertion[0], assertion);
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .body(query)
+                .when()
+                .post(CSW_PATH.getUrl())
+                .then()
+                .assertThat()
+                .body(assertion[0], assertion),
+        3,
+        1);
 
     // Assert that response is the same as without the plugin
-    given()
-        .contentType(ContentType.XML)
-        .body(query)
-        .when()
-        .post(CSW_PATH.getUrl())
-        .then()
-        .assertThat()
-        .body(assertion[0], assertion);
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .body(query)
+                .when()
+                .post(CSW_PATH.getUrl())
+                .then()
+                .assertThat()
+                .body(assertion[0], assertion),
+        3,
+        1);
   }
 
   @Test
   public void testCswQueryForMetacardXml() {
     String titleQuery = getCswQuery("title", "myTitle", "application/xml", "urn:catalog:metacard");
 
-    given()
-        .contentType(ContentType.XML)
-        .body(titleQuery)
-        .when()
-        .post(CSW_PATH.getUrl())
-        .then()
-        .assertThat()
-        .body(
-            hasXPath(
-                "/GetRecordsResponse/SearchResults/metacard/@id",
-                is(METACARD_IDS[GEOJSON_RECORD_INDEX])),
-            hasXPath("/GetRecordsResponse/SearchResults/@numberOfRecordsReturned", is("1")),
-            hasXPath(
-                "/GetRecordsResponse/SearchResults/@recordSchema", is("urn:catalog:metacard")));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .body(titleQuery)
+                .when()
+                .post(CSW_PATH.getUrl())
+                .then()
+                .assertThat()
+                .body(
+                    hasXPath(
+                        "/GetRecordsResponse/SearchResults/metacard/@id",
+                        is(METACARD_IDS[GEOJSON_RECORD_INDEX])),
+                    hasXPath("/GetRecordsResponse/SearchResults/@numberOfRecordsReturned", is("1")),
+                    hasXPath(
+                        "/GetRecordsResponse/SearchResults/@recordSchema",
+                        is("urn:catalog:metacard"))),
+        3,
+        1);
   }
 
   @Test
   public void testCswQueryForJson() {
     String titleQuery = getCswQuery("title", "myTitle", "application/json", null);
 
-    given()
-        .headers("Accept", "application/json", "Content-Type", "application/xml")
-        .body(titleQuery)
-        .when()
-        .post(CSW_PATH.getUrl())
-        .then()
-        .assertThat()
-        .contentType(ContentType.JSON)
-        .body("results[0].metacard.properties.title", equalTo(RECORD_TITLE_1));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .headers("Accept", "application/json", "Content-Type", "application/xml")
+                .body(titleQuery)
+                .when()
+                .post(CSW_PATH.getUrl())
+                .then()
+                .assertThat()
+                .contentType(ContentType.JSON)
+                .body("results[0].metacard.properties.title", equalTo(RECORD_TITLE_1)),
+        3,
+        1);
   }
 
   @Test
@@ -803,7 +808,8 @@ public class TestFederation extends AbstractIntegrationTest {
   }
 
   @Test
-  public void testOpensearchToCswSourceToCswEndpointQuerywithMetacardXml() {
+  @Ignore("https://github.com/codice/ddf/issues/6798")
+  public void testOpensearchToCswSourceToCswEndpointQueryWithMetacardXml() {
     ValidatableResponse response =
         getOpenSearch(
             "xml", null, null, "q=" + DEFAULT_KEYWORD, "src=" + CSW_SOURCE_WITH_METACARD_XML_ID);
@@ -889,7 +895,7 @@ public class TestFederation extends AbstractIntegrationTest {
               .get("value.findAll { source -> source.id == name}");
       String openSearchPid =
           (String)
-              ((ArrayList<Map<String, Object>>) (sources.get(0).get("configurations")))
+              ((ArrayList<Map<String, Object>>) sources.get(0).get("configurations"))
                   .get(0)
                   .get("id");
 
@@ -934,27 +940,35 @@ public class TestFederation extends AbstractIntegrationTest {
     String wildcardQuery = getCswSubscription("xml", "*", RESTITO_STUB_SERVER.getUrl());
 
     String subscriptionId =
-        given()
-            .contentType(ContentType.XML)
-            .body(wildcardQuery)
-            .when()
-            .post(CSW_SUBSCRIPTION_PATH.getUrl())
-            .then()
-            .assertThat()
-            .body(hasXPath("/Acknowledgement/RequestId"))
-            .extract()
-            .body()
-            .xmlPath()
-            .get("Acknowledgement.RequestId")
-            .toString();
+        CatalogTestCommons.retryAssertionErrorCall(
+            () ->
+                given()
+                    .contentType(ContentType.XML)
+                    .body(wildcardQuery)
+                    .when()
+                    .post(CSW_SUBSCRIPTION_PATH.getUrl())
+                    .then()
+                    .assertThat()
+                    .body(hasXPath("/Acknowledgement/RequestId"))
+                    .extract()
+                    .body()
+                    .xmlPath()
+                    .get("Acknowledgement.RequestId")
+                    .toString(),
+            3,
+            1);
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .body(hasXPath("/Acknowledgement/RequestId"));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .body(hasXPath("/Acknowledgement/RequestId")),
+        3,
+        1);
 
     String metacardId =
         ingest(
@@ -967,21 +981,29 @@ public class TestFederation extends AbstractIntegrationTest {
         new HashSet<>(0),
         new HashSet<>(Arrays.asList(subscrptionIds)));
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .delete(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .body(hasXPath("/Acknowledgement/RequestId"));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .delete(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .body(hasXPath("/Acknowledgement/RequestId")),
+        3,
+        1);
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .statusCode(404);
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .statusCode(404),
+        3,
+        1);
   }
 
   @Test
@@ -995,19 +1017,23 @@ public class TestFederation extends AbstractIntegrationTest {
 
     // CswSubscribe
     String subscriptionId =
-        given()
-            .contentType(ContentType.XML)
-            .body(wildcardQuery)
-            .when()
-            .post(CSW_SUBSCRIPTION_PATH.getUrl())
-            .then()
-            .assertThat()
-            .body(hasXPath("/Acknowledgement/RequestId"))
-            .extract()
-            .body()
-            .xmlPath()
-            .get("Acknowledgement.RequestId")
-            .toString();
+        CatalogTestCommons.retryAssertionErrorCall(
+            () ->
+                given()
+                    .contentType(ContentType.XML)
+                    .body(wildcardQuery)
+                    .when()
+                    .post(CSW_SUBSCRIPTION_PATH.getUrl())
+                    .then()
+                    .assertThat()
+                    .body(hasXPath("/Acknowledgement/RequestId"))
+                    .extract()
+                    .body()
+                    .xmlPath()
+                    .get("Acknowledgement.RequestId")
+                    .toString(),
+            3,
+            1);
 
     BundleService bundleService = getServiceManager().getService(BundleService.class);
     Bundle bundle = bundleService.getBundle("spatial-csw-endpoint");
@@ -1026,13 +1052,17 @@ public class TestFederation extends AbstractIntegrationTest {
 
     getServiceManager().waitForHttpEndpoint(CSW_SUBSCRIPTION_PATH + "?_wadl");
     // get subscription
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .body(hasXPath("/Acknowledgement/RequestId"));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .body(hasXPath("/Acknowledgement/RequestId")),
+        3,
+        1);
 
     String metacardId =
         ingest(
@@ -1045,21 +1075,29 @@ public class TestFederation extends AbstractIntegrationTest {
         new HashSet<>(0),
         new HashSet<>(Arrays.asList(subscrptionIds)));
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .delete(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .body(hasXPath("/Acknowledgement/RequestId"));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .delete(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .body(hasXPath("/Acknowledgement/RequestId")),
+        3,
+        1);
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .statusCode(404);
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .statusCode(404),
+        3,
+        1);
   }
 
   @Test
@@ -1075,36 +1113,48 @@ public class TestFederation extends AbstractIntegrationTest {
     String event = getFileContent("get-records-response.xml");
 
     String subscriptionId =
-        given()
-            .contentType(ContentType.XML)
-            .body(wildcardQuery)
-            .when()
-            .post(CSW_SUBSCRIPTION_PATH.getUrl())
-            .then()
-            .assertThat()
-            .body(hasXPath("/Acknowledgement/RequestId"))
-            .extract()
-            .body()
-            .xmlPath()
-            .get("Acknowledgement.RequestId")
-            .toString();
+        CatalogTestCommons.retryAssertionErrorCall(
+            () ->
+                given()
+                    .contentType(ContentType.XML)
+                    .body(wildcardQuery)
+                    .when()
+                    .post(CSW_SUBSCRIPTION_PATH.getUrl())
+                    .then()
+                    .assertThat()
+                    .body(hasXPath("/Acknowledgement/RequestId"))
+                    .extract()
+                    .body()
+                    .xmlPath()
+                    .get("Acknowledgement.RequestId")
+                    .toString(),
+            3,
+            1);
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .body(hasXPath("/Acknowledgement/RequestId"));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .body(hasXPath("/Acknowledgement/RequestId")),
+        3,
+        1);
 
-    given()
-        .contentType(ContentType.XML)
-        .body(event)
-        .when()
-        .post(CSW_EVENT_PATH.getUrl())
-        .then()
-        .assertThat()
-        .statusCode(200);
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .body(event)
+                .when()
+                .post(CSW_EVENT_PATH.getUrl())
+                .then()
+                .assertThat()
+                .statusCode(200),
+        3,
+        1);
 
     String[] subscrptionIds = {subscriptionId};
 
@@ -1113,25 +1163,34 @@ public class TestFederation extends AbstractIntegrationTest {
         new HashSet<>(0),
         new HashSet<>(Arrays.asList(subscrptionIds)));
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .delete(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .body(hasXPath("/Acknowledgement/RequestId"));
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .delete(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .body(hasXPath("/Acknowledgement/RequestId")),
+        3,
+        1);
 
-    given()
-        .contentType(ContentType.XML)
-        .when()
-        .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
-        .then()
-        .assertThat()
-        .statusCode(404);
+    CatalogTestCommons.retryAssertionErrorCall(
+        () ->
+            given()
+                .contentType(ContentType.XML)
+                .when()
+                .get(CSW_SUBSCRIPTION_PATH.getUrl() + "/" + subscriptionId)
+                .then()
+                .assertThat()
+                .statusCode(404),
+        3,
+        1);
   }
 
   /** Tests basic download from the live federated csw source */
   @Test
+  @Ignore("https://github.com/codice/ddf/issues/6798")
   public void testDownloadFromFederatedCswSource() {
 
     String filename = "product1.txt";
@@ -1177,7 +1236,8 @@ public class TestFederation extends AbstractIntegrationTest {
    * @throws Exception
    */
   @Test
-  public void testRetrievalReliablility() throws Exception {
+  @Ignore("https://github.com/codice/ddf/issues/6798")
+  public void testRetrievalReliability() throws Exception {
     try {
       getSecurityPolicy().configureWebContextPolicy("PKI|BASIC", "PKI|BASIC", null, null);
 
@@ -1245,6 +1305,7 @@ public class TestFederation extends AbstractIntegrationTest {
    * respond with the correct Partial Content when a range header is sent in the request
    */
   @Test
+  @Ignore("https://github.com/codice/ddf/issues/6798")
   public void testRetrievalWithByteOffset() {
 
     String filename = "product2.txt";
@@ -1297,6 +1358,7 @@ public class TestFederation extends AbstractIntegrationTest {
 
   /** Tests that if the endpoint disconnects 3 times, the retrieval fails after 3 attempts */
   @Test
+  @Ignore("https://github.com/codice/ddf/issues/6798")
   public void testRetrievalReliabilityFails() {
 
     String filename = "product3.txt";
@@ -1368,6 +1430,7 @@ public class TestFederation extends AbstractIntegrationTest {
 
   /** Tests that ddf will redownload a product if the remote metacard has changed */
   @Test
+  @Ignore("https://github.com/codice/ddf/issues/6798")
   public void testCacheIsUpdatedIfRemoteProductChanges() {
     String filename = "product5.txt";
     String metacardId = generateUniqueMetacardId();
@@ -1425,6 +1488,7 @@ public class TestFederation extends AbstractIntegrationTest {
   }
 
   @Test
+  @Ignore("https://github.com/codice/ddf/issues/6798")
   public void testProductDownloadWithTwoUsers() throws Exception {
     try {
       getSecurityPolicy().configureWebContextPolicy("PKI|BASIC", "PKI|BASIC", null, null);
@@ -1544,7 +1608,7 @@ public class TestFederation extends AbstractIntegrationTest {
 
     return getFileContent(
         "csw-query-response.xml",
-        ImmutableMap.of(
+        Map.of(
             "sourceId",
             CSW_STUB_SOURCE_ID,
             "httpRoot",
